trunk/Archive2/d9/335cf0caad2bca/output
+ g++-4.9 -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp:6:10: warning: ISO C++ forbids use of 'auto' in parameter declaration [-Wpedantic]
 auto incr(auto x) { return x++; }
          ^
main.cpp: In instantiation of 'auto incr(auto:1) [with auto:1 = X]':
main.cpp:13:15:   required from here
main.cpp:6:29: error: could not convert 'x.X::operator++(0)' from 'int' to 'X'
 auto incr(auto x) { return x++; }
                             ^
main.cpp: In function 'auto incr(auto:1) [with auto:1 = X]':
main.cpp:6:33: warning: control reaches end of non-void function [-Wreturn-type]
 auto incr(auto x) { return x++; }
                                 ^
